--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
         <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     </head>
 
 <!-- CABEÇALHO (INÍCIO) -->
-    <body>
+    <body>  
         <header>
             <h1>CONTADOR DE PIXEL</h1>
         </header>
+   
 <!-- CABEÇALHO (FIM) -->
 
 <!-- CARREGAR IMAGEM (INÍCIO) -->
 <main>
+
+    
 <section id="container">    
     <div>
         <label for="image">Escolha uma imagem:</label>
@@ -29,7 +33,7 @@
 <!-- CARREGAR IMAGEM (MEIO) -->
 
 <section id="pixel-cores" class="pixel-cores invisible">
-    <h2>PÍXEIS</h2>                
+    <h2>PÍXELS</h2>                
     <p><span id="color-count"></span> cores diferentes</p>
     <div id="amostra-de-cores" class="amostra-de-cores">
     </div>
