--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 <section id="pixel-cores" class="pixel-cores invisible">
     <h2>PÍXELS</h2>                
-    <p><span id="color-count"></span> cores diferentes</p>
+    <p><span id="color-count"></span> cores diferentes.</p>
+    <p>Abaixo amostra com as cores que aparecem na imagem e quantas vezes ela aparece.</p>
     <div id="amostra-de-cores" class="amostra-de-cores">
     </div>
 </section> 
