--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="pt-BR">
     <head>
         <meta charset="utf-8">
+
         <meta name="author" content="Hebert Santana">
+        <meta name="description" content="Uma aplicação web para você converter uma imagem (.png ou .jpg) em quantidade de píxels e ver quantos píxels há de casa cor.">
+        <meta name="keywords" content="pixel, pixels em foto, converter imagem em pixels, contador de pixel, calcular pixel, pixel de cada cor">
+
         <title>Contador de Pixel</title>
         <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
