--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div id="carregando" class="invisible">
     <p>CARREGANDO...</p>
-    <img src="./assets/img/jeneregrete.gif">
+    <img src="./assets/img/jeneregrete.gif" alt="não regreto nada chicken" width="200px">
 </div>
 
 <!-- CARREGAR IMAGEM (FIM) -->
@@ -55,7 +55,7 @@
 
 <!-- FOOTER (INÍCIO) -->
         <footer>
-            <p>Página em desenvolvimento por:  <a href="https://www.linkedin.com/in/hebert-santana/" ><span>Hebert Santana</span></a></p>
+            <p>Desenvolvido por:  <a href="https://www.linkedin.com/in/hebert-santana/" ><span>Hebert Santana</span></a></p>
         </footer> 
 <!-- FOOTER (FIM) -->
 
